k8s/ms-product/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-product
  namespace: ms-product
spec:
  type: NodePort
  selector:
    app: ms-product
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30000
